# pico-pilot

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  main.c  states.md  test.c
include/: banned.h  checksum.h  circular_buffer.h  constants.h  filtering.h  globals.h  guidance.h  main.h  panic_assert.h  pins.h  plotter.h  servo.h  telemetry.h  tone.h  tvc.h
include/async/: audio.h  executor.h
include/constants/: adc.h  uart.h
src/: guidance.c  main.c  panic.c  pins.c  plotter.c  servo.c  song_library.c  telemetry.c  tone.c  tone.pio  tvc.c
src/async/: audio.c  executor.c
